# adventofcode2023

./: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  13.py  14.py  15.py  18.py  18_brute_force.py  20.py  22.py  23.py  23_slower.py  24.py  25.py  data_d_01.csv  helpers.py  pyproject.toml  template.py
