[tool.poetry]
name = "adventofcode2023"
version = "0.1.0"
description = ""
authors = ["Jonathan <jonathan@cradle.bio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
black = {extras = ["jupyter"], version = "^23.11.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
